Foi criado a rota de /register/users para cadastro dos usuarios e a rota de /login para efetuar o login e gerar o token
